--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@ venv/
 
 *.log
 
-assets\nexuscorp_logo.png
+assets/nexuscorp_logo.png
 assets\welcome_banner.png
 assets\welcome_banner11.png
-
 Screenshots
